social media logo
to black

--- a/CONTACT.HTML
+++ b/CONTACT.HTML
@@ -77,16 +77,15 @@
 
     <footer>
         <div class="icon-container">
-            <img src="img/github-icon.svg" alt="GitHub Icon" />
+            <img src="img/B.github.png" alt="GitHub Icon" />
         </div>
         <div class="icon-container">
-            <img src="img/twitter-6.svg" alt="Twitter Icon" />
+            <img src="img/B.facebook.png" alt="facebook Icon" />
         </div>
         <div class="icon-container">
-            <img src="img/linkedin-icon-2.svg" alt="LinkedIn Icon" />
+            <img src="img/B.linkedin.png" alt="LinkedIn Icon" />
         </div>
     </footer>
-
 </body>
 
 </html>
