--- a/ABOUT.HTML
+++ b/ABOUT.HTML
@@ -34,7 +34,7 @@
                 </li>
                 <li role="presentation">
                     <a href="work.html" role="menuitem" class="navigation-list__item">work</a>
-        </nav>
+
         </li>
         </ul>
         </nav>
@@ -50,14 +50,14 @@
     </div>
     <div>
         <h2> How It Works</h2>
-        <P>works to connect readers with independent booksellers all over the world.
+        <p>works to connect readers with independent booksellers all over the world.
             <br>
             We believe local bookstores are essential community hubs that foster culture
             <br>
             curiosity, and a love of reading, and we're committed to helping them thrive
             <br>
             Every purchase on the site financially supports independent bookstores.
-        </P>
+        </p>
         <div class="download-button">
             <button>Download my CV</button>
         </div>
