--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </li>
                 <li role="presentation">
                     <a href="work.html" role="menuitem" class="navigation-list__item">work</a>
-        </li>
-        </ul>
+                </li>
+            </ul>
         </nav>
     </header>
 
@@ -68,7 +68,7 @@
                 <img src="img/B.linkedin.png" alt="LinkedIn Icon" />
             </div>
         </footer>
-
+    </div>
 </body>
 
 </html>
