--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
                 </li>
                 <li role="presentation">
                     <a href="work.html" role="menuitem" class="navigation-list__item">work</a>
-        </nav>
+    
         </li>
         </ul>
         </nav>
@@ -80,9 +80,9 @@
                 <br>
                 <a href="https://www.linkedin.com/in/joud-hasan-145221230/?originalSubdomain=de">to read more about the
                     book</a>
-
+                </div>
             </div>
-
+        </section>
 
 
             <footer>
