--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <div id="mymaincontainer">
+    <div id="my-main-container">
         <div class="welcome-text-logo">
             <br>
             <img src="img/logo.pnj.jpeg" alt="My Book Store Logo" class="profile-image2">
