--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contact My Book Store</title>
+    <title>Contact My Book Store</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-    <link rel="stylesheet" type="text/css" href="CSS/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="CSS/style.production.css">
 </head>
 
@@ -18,66 +14,55 @@
 <body>
 
     <header class="page-header">
-
-        <img src="img/logo.png" width="250px" alt="My Book Store Logo" class="profile-image">
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation">
-                    <a href="index.html" role="menuitem"
-                        class="navigation-list__item navigation-list__item--active">Home</a>
-                </li>
-                <li role="presentation">
-                    <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
-                </li>
-                <li role="presentation">
-                    <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-                </li>
-                <li role="presentation">
-                    <a href="work.html" role="menuitem" class="navigation-list__item">work</a>
-
-                </li>
-            </ul>
-
-
-        </nav>
+        <div class="header-container">
+            <p class="headername">Joud Hasan</p>
+            <nav class="main-navigation">
+                <ul class="navigation-list">
+                    <li>
+                        <a href="index.html" class="navigation-list__item">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html" class="navigation-list__item">About</a>
+                    </li>
+                    <li>
+                        <a href="work.html" class="navigation-list__item">Work</a>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="navigation-list__item navigation-list__item--active">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-
-
-    <main>
+    <main class="contact-us">
         <h1>Contact us</h1>
-        <div>Danziger street 160<br>
-            10404, Berlin<br>
-            Deutschland<br>
+        <div class="contact">
+            <p>Danziger street 160<br>
+                10404, Berlin<br>
+                Deutschland</p>
+            <p>Email us: <a href="mailto:Joud.hasan85@gmail.com" class="contact-link">joud.hasan85@gmail.com</a></p>
+            <p>Tel: <a href="tel:+4917672116422" class="contact-link">+49 17672116422</a></p>
+
             <br>
-            <p>Email us: <a href="mailto:Joud.hasan85@gmail.com">joud.hasan85@gmail.com</a></p>
-            <p>Tel: <a href="tel:+4917672116422">+49 17672116422</a></p>
-            <p>Skype: <a href="skype:hello.mybookstore">hello.mybookstore</a></p>
-            <form action="https://openlibrary.org/" method="get">
-                <label for="search-library">Explore our library:</label>
-                <input type="text" id="search-library" name="q" placeholder="Search...">
-                <button type="submit">Go</button>
-            </form>
-            <br>
-            <form action="" method="post" id="contact-form">
+            <form action="" method="post" id="contact-form" class="contact-form">
                 <label class="standard-label" for="contact-email">Email: </label>
-                <input type="email" id="contact-email" required>
-                <input type="submit" value="Submit">
+                <input type="email" id="contact-email" required class="contact-input">
+                <input type="submit" value="Submit" class="contact-button">
                 <br>
                 <br>
                 <label class="standard-label" for="contact-Telephone">Telephone:</label>
-                <input type="tel" id="contact-Telephone">
+                <input type="tel" id="contact-Telephone" class="contact-input">
                 <br>
                 <br>
                 <label class="standard-label" for="contact-Message">Message: </label>
-                <textarea maxlength="250" id="contact-Message" required=""></textarea>
-                <input type="submit" value="Send message">
-
+                <textarea maxlength="250" id="contact-Message" required class="contact-textarea"></textarea>
+                <input type="submit" value="Send message" class="contact-button">
             </form>
         </div>
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="icon-container">
             <img src="img/B.github.png" alt="GitHub Icon" />
         </div>
