--- a/work.html
+++ b/work.html
@@ -11,36 +11,48 @@
 </head>
 
 <body>
-
     <header class="page-header">
         <div class="header-container">
             <p class="headername">Joud Hasan</p>
             <nav class="main-navigation">
                 <ul class="navigation-list">
                     <li>
-                        <a href="index.html" class="navigation-list__item">Home</a>
+                        <a href="index.html" class="navigation-list__item navigation-list__item--active">Home</a>
                     </li>
                     <li>
                         <a href="about.html" class="navigation-list__item">About</a>
                     </li>
                     <li>
-                        <a href="work.html" class="navigation-list__item">Work</a>
-                    </li>
-                    <li>
-                        <a href="contact.html" class="navigation-list__item navigation-list__item--active">Contact</a>
+                        <a href="contact.html" class="navigation-list__item">Contact</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
 
+    <section class="project-section">
 
+        <div class="project-container">
+            <h2>My Project</h2>
+            <p class="name">Meet App</p>
+            <p>Meet is an application that empowers users to discover events happening in various cities.
+                Users can filter events by city, view event details, specify the number of events to display, use the
+                app
+                offline, add shortcuts to the home screen, and visualize event details through charts.</p>
+
+            <!-- Image of Meet App -->
+            <img src="img/meet.png" alt="Meet App" class="project-image">
+
+            <!-- Link to View Project -->
+            <a href="https://joudhasan.github.io/meet/" class="btn btn-primary">View Project</a>
+        </div>
+    </section>
     <footer class="footer">
         <div class="icon-container">
             <img src="img/B.github.png" alt="GitHub Icon" />
         </div>
         <div class="icon-container">
-            <img src="img/B.facebook.png" alt="facebook Icon" />
+            <img src="img/B.facebook.png" alt="Facebook Icon" />
         </div>
         <div class="icon-container">
             <img src="img/B.linkedin.png" alt="LinkedIn Icon" />
