--- a/index.html
+++ b/index.html
@@ -5,70 +5,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contact My Book Store</title>
+    <title>Portfolio</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-    <link rel="stylesheet" type="text/css" href="CSS/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="CSS/style.production.css">
 </head>
 
-
 <body>
     <header class="page-header">
-        <!-- Add Logo here -->
-        <img src="img/logo.png" width="250px" alt="My Book Store Logo" class="profile-image">
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation">
-                    <a href="index.html" role="menuitem"
-                        class="navigation-list__item navigation-list__item--active">Home</a>
-                </li>
-                <li role="presentation">
-                    <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
-                </li>
-                <li role="presentation">
-                    <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-                </li>
-                <li role="presentation">
-                    <a href="work.html" role="menuitem" class="navigation-list__item">work</a>
-        </li>
-        </ul>
-        </nav>
+        <div class="header-container">
+            <p class="headername">Joud Hasan</p>
+            <nav class="main-navigation">
+                <ul class="navigation-list">
+                    <li>
+                        <a href="index.html" class="navigation-list__item navigation-list__item--active">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html" class="navigation-list__item">About</a>
+                    </li>
+                    <li>
+                        <a href="work.html" class="navigation-list__item">Work</a>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="navigation-list__item">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <div id="mymaincontainer">
+    <div id="my-main-container">
         <div class="welcome-text-logo">
-            <br>
-            <img src="img/logo.pnj.jpeg" alt="My Book Store Logo" class="profile-image2">
+            <div class="profile-container">
+                <img src="img/joud.png" alt="My Profile Image" class="profile-image2">
+            </div>
             <div class="welcome-text">
-                <h2>Hello World!</h2>
-                <p>My name is Joud Hasan. I am a <span>writer</span> and developer.</p>
+                <h2>My Portfolio</h2>
+                <p>journalist and writer and project manager.</p>
             </div>
-
-            <div id="for-more-information">
-                <a href="https://www.linkedin.com/in/joud-hasan-145221230/?originalSubdomain=de">Check out some of my
-                    work</a>
-                <a href="">Books Shop</a>
-                <button type="Button">Button</button>
-                <button class="button__secondary">Best Seller</button>
-            </div>
-
         </div>
+    </div>
 
-        <footer>
-            <div class="icon-container">
-                <img src="img/B.github.png" alt="GitHub Icon" />
-            </div>
-            <div class="icon-container">
-                <img src="img/B.facebook.png" alt="facebook Icon" />
-            </div>
-            <div class="icon-container">
-                <img src="img/B.linkedin.png" alt="LinkedIn Icon" />
-            </div>
-        </footer>
-
+    <footer class="footer">
+        <div class="icon-container">
+            <img src="img/B.github.png" alt="GitHub Icon" />
+        </div>
+        <div class="icon-container">
+            <img src="img/B.facebook.png" alt="Facebook Icon" />
+        </div>
+        <div class="icon-container">
+            <img src="img/B.linkedin.png" alt="LinkedIn Icon" />
+        </div>
+    </footer>
 </body>
 
 </html>
