--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
                 offline, add shortcuts to the home screen, and visualize event details through charts.</p>
 
             <!-- Image of Meet App -->
-            <img src="img/meet.png" alt="Meet App" class="project-image">
+            <img src="img/MEET.PNG" alt="Meet App" class="project-image">
 
             <!-- Link to View Project -->
             <a href="https://joudhasan.github.io/meet/" class="btn btn-primary">View Project</a>
