--- a/work.html
+++ b/work.html
@@ -46,6 +46,24 @@
             <!-- Link to View Project -->
             <a href="https://joudhasan.github.io/meet/" class="btn btn-primary">View Project</a>
         </div>
+
+
+        <p class="name">Chat App</p>
+        <p>This React Native Chat Application allows users to engage in real-time conversations,
+            share images, and even send their location. Built with a focus on accessibility,
+            the app supports screen readers and offline message access,
+            providing an inclusive and seamless chat experience across both iOS and Android devices.</p>
+
+        <!-- Image of Chat App -->
+        <img src="img/chatapp1.png" alt="chatapp1" class="project-image">
+
+        <!-- Image of Chat App -->
+        <img src="img/chatapp2.png" alt="chatapp2" class="project-image">
+
+        <!-- Link to View Project -->
+        <a href="https://github.com/JoudHasan/Chat.App.git" class="btn btn-primary">View Project</a>
+        </div>
+
     </section>
     <footer class="footer">
         <div class="icon-container">
