Updated chat app CSS to match the layout of the meet app

--- a/work.html
+++ b/work.html
@@ -31,40 +31,39 @@
     </header>
 
     <section class="project-section">
-
         <div class="project-container">
             <h2>My Project</h2>
+
+            <!-- Meet App Section -->
             <p class="name">Meet App</p>
             <p>Meet is an application that empowers users to discover events happening in various cities.
                 Users can filter events by city, view event details, specify the number of events to display, use the
-                app
-                offline, add shortcuts to the home screen, and visualize event details through charts.</p>
+                app offline, add shortcuts to the home screen, and visualize event details through charts.</p>
 
             <!-- Image of Meet App -->
             <img src="img/MEET.PNG" alt="Meet App" class="project-image">
 
-            <!-- Link to View Project -->
+            <!-- Link to View Meet App Project -->
             <a href="https://joudhasan.github.io/meet/" class="btn btn-primary">View Project</a>
         </div>
 
+        <div class="project-container">
+            <!-- Chat App Section -->
+            <p class="name">Chat App</p>
+            <p>This React Native Chat Application allows users to engage in real-time conversations,
+                share images, and even send their location. Built with a focus on accessibility,
+                the app supports screen readers and offline message access, providing an inclusive
+                and seamless chat experience across both iOS and Android devices.</p>
 
-        <p class="name">Chat App</p>
-        <p>This React Native Chat Application allows users to engage in real-time conversations,
-            share images, and even send their location. Built with a focus on accessibility,
-            the app supports screen readers and offline message access,
-            providing an inclusive and seamless chat experience across both iOS and Android devices.</p>
+            <!-- Images of Chat App -->
+            <img src="img/chatapp1.png" alt="Chat App Screen 1" class="project-image">
+            <img src="img/chatapp2.png" alt="Chat App Screen 2" class="project-image">
 
-        <!-- Image of Chat App -->
-        <img src="img/chatapp1.png" alt="chatapp1" class="project-image">
-
-        <!-- Image of Chat App -->
-        <img src="img/chatapp2.png" alt="chatapp2" class="project-image">
-
-        <!-- Link to View Project -->
-        <a href="https://github.com/JoudHasan/Chat.App.git" class="btn btn-primary">View Project</a>
+            <!-- Link to View Chat App Project -->
+            <a href="https://github.com/JoudHasan/Chat.App.git" class="btn btn-primary">View Project</a>
         </div>
-
     </section>
+
     <footer class="footer">
         <div class="icon-container">
             <img src="img/B.github.png" alt="GitHub Icon" />
