fixing image size

--- a/work.html
+++ b/work.html
@@ -56,8 +56,8 @@
                 and seamless chat experience across both iOS and Android devices.</p>
 
             <!-- Images of Chat App -->
-            <img src="img/chatapp1.png" alt="Chat App Screen 1" class="project-image">
-            <img src="img/chatapp2.png" alt="Chat App Screen 2" class="project-image">
+            <img src="img/chatappo.png" alt="Chat App Screen 1" class="project-image">
+            <img src="img/chatappz.png" alt="Chat App Screen 2" class="project-image">
 
             <!-- Link to View Chat App Project -->
             <a href="https://github.com/JoudHasan/Chat.App.git" class="btn btn-primary">View Project</a>
