Added projects and updated styling with grey background and green elements

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
     <header class="page-header">
         <div class="header-container">
-            <p class="headername">Joud Hasan</p>
+            <p class="headername">MyPortfolio</p>
             <nav class="main-navigation">
                 <ul class="navigation-list">
                     <li>
