--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact My Book Store</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="CSS/style.production.css">
 </head>
@@ -15,7 +14,7 @@
 
     <header class="page-header">
         <div class="header-container">
-            <p class="headername">Joud Hasan</p>
+            <p class="headername">MyPortfolio</p>
             <nav class="main-navigation">
                 <ul class="navigation-list">
                     <li>
@@ -38,10 +37,7 @@
     <main class="contact-us">
         <h1>Contact us</h1>
         <div class="contact">
-            <p>Danziger street 160<br>
-                10404, Berlin<br>
-                Deutschland</p>
-            <p>Email us: <a href="mailto:Joud.hasan85@gmail.com" class="contact-link">joud.hasan85@gmail.com</a></p>
+            <p>Email me: <a href="mailto:Joud.hasan85@gmail.com" class="contact-link">joud.hasan85@gmail.com</a></p>
             <p>Tel: <a href="tel:+4917672116422" class="contact-link">+49 17672116422</a></p>
 
             <br>
