--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="page-header">
         <div class="header-container">
-            <p class="headername">Joud Hasan</p>
+            <p class="headername">MyPortfolio</p>
             <nav class="main-navigation">
                 <ul class="navigation-list">
                     <li>
@@ -39,7 +39,7 @@
                 <img src="img/joud.png" alt="My Profile Image" class="profile-image2">
             </div>
             <div class="welcome-text">
-                <h2>My Portfolio</h2>
+                <h2>Joud Hasan</h2>
                 <p>journalist and writer and project manager.</p>
             </div>
         </div>
