--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
 <body>
     <header class="page-header">
         <div class="header-container">
-            <p class="headername">Joud Hasan</p>
+            <p class="headername">MyPortfolio</p>
             <nav class="main-navigation">
                 <ul class="navigation-list">
                     <li>
@@ -55,12 +55,68 @@
                 the app supports screen readers and offline message access, providing an inclusive
                 and seamless chat experience across both iOS and Android devices.</p>
 
-            <!-- Images of Chat App -->
-            <img src="img/chatappo.png" alt="Chat App Screen 1" class="project-image">
-            <img src="img/chatappz.png" alt="Chat App Screen 2" class="project-image">
+            <!-- Images of Chat App - Displayed Side by Side -->
+            <div class="chat-images">
+                <img src="img/chatappo.png" alt="Chat App Screen 1" class="project-image-small">
+                <img src="img/chatappz.png" alt="Chat App Screen 2" class="project-image-small">
+            </div>
 
             <!-- Link to View Chat App Project -->
             <a href="https://github.com/JoudHasan/Chat.App.git" class="btn btn-primary">View Project</a>
+        </div>
+
+
+        <div class="project-container">
+            <!-- Movie App Section -->
+            <p class="name">MyFlix App</p>
+            <p>MyFlix is a web application built with React that allows users to explore and enjoy a vast collection of
+                movies.
+                With a sleek, responsive interface powered by React Bootstrap and React Router,
+                MyFlix offers seamless navigation and an engaging movie browsing experience.
+                The app is fully deployed on Netlify and connected to a MongoDB-based backend hosted on Heroku.</p>
+
+            <!-- Image of MyFlix App -->
+            <img src="img/movies.png" alt="MyFlix App Screen" class="project-image">
+
+            <!-- Link to View MyFlix App Live -->
+            <a href="https://mymovieflixy.netlify.app/" class="btn btn-primary">View Live App</a>
+
+            <!-- Link to MyFlix GitHub Repository -->
+            <a href="https://github.com/JoudHasan/myFlix-client" class="btn btn-secondary">View GitHub Repository</a>
+        </div>
+
+        <div class="project-container">
+            <!-- Movie App Section -->
+            <p class="name">MyMovie App</p>
+            <p>MyMovie is a web application built with Angular, offering users a smooth and engaging movie browsing
+                experience.
+                Users can explore a vast collection of movies, benefiting from Angular's responsive design and seamless
+                navigation.
+                The app is developed with Angular CLI, providing a robust and efficient environment for easy project
+                setup and management.</p>
+
+            <!-- Image of MyMovie App -->
+            <img src="img/MyMovie.png" alt="MyMovie App Screen" class="project-image">
+
+            <!-- Link to View MyMovie App  -->
+            <a href="https://github.com/JoudHasan/myFlix-Angular-O.git" class="btn btn-primary">View Project</a>
+
+        </div>
+        <div class="project-container">
+            <!-- Pokedex App Section -->
+            <p class="name">Pokedex App</p>
+            <p>The Pokedex App allows users to explore and learn about various Pokemon,
+                offering details such as names, heights, and images. With a clean and intuitive interface,
+                users can browse a list of Pokemon, view detailed information on each, and search for specific Pokemon.
+                Built using HTML, CSS, JavaScript, Bootstrap, and the Fetch API, this app provides a seamless and
+                engaging user experience.</p>
+
+            <!-- Image of Pokedex App -->
+            <img src="img/Pokedex.png" alt="Pokedex App Screen" class="project-image">
+
+            <!-- Link to View Pokedex App -->
+            <a href="https://github.com/JoudHasan/pokemon.-2.git" class="btn btn-primary">View Project</a>
+
         </div>
     </section>
 
