--- a/index.html
+++ b/index.html
@@ -156,10 +156,23 @@
 
     <!-- Footer (Placed outside the contact section) -->
     <footer class="footer">
-        <div class="icon-container"><img src="img/B.github.png" alt="GitHub Icon" /></div>
-        <div class="icon-container"><img src="img/B.facebook.png" alt="Facebook Icon" /></div>
-        <div class="icon-container"><img src="img/B.linkedin.png" alt="LinkedIn Icon" /></div>
+        <div class="icon-container">
+            <a href="hhttps://github.com/JoudHasan" target="_blank">
+                <img src="img/B.github.png" alt="GitHub Icon" />
+            </a>
+        </div>
+        <div class="icon-container">
+            <a href="https://www.instagram.com/joud0hasan/" target="_blank">
+                <img src="img/instagram-icon-white-on-black.png" alt="Instagram Icon" />
+            </a>
+        </div>
+        <div class="icon-container">
+            <a href="https://www.linkedin.com/in/joud-hasan-145221230" target="_blank">
+                <img src="img/B.linkedin.png" alt="LinkedIn Icon" />
+            </a>
+        </div>
     </footer>
+
 
 
 
