--- a/work.html
+++ b/work.html
@@ -120,17 +120,23 @@
         </div>
     </section>
 
+    <!-- Footer (Placed outside the contact section) -->
     <footer class="footer">
         <div class="icon-container">
-            <img src="img/B.github.png" alt="GitHub Icon" />
+            <a href="hhttps://github.com/JoudHasan" target="_blank">
+                <img src="img/B.github.png" alt="GitHub Icon" />
+            </a>
         </div>
         <div class="icon-container">
-            <img src="img/B.facebook.png" alt="Facebook Icon" />
+            <a href="https://www.instagram.com/joud0hasan/" target="_blank">
+                <img src="img/instagram-icon-white-on-black.png" alt="Instagram Icon" />
+            </a>
         </div>
         <div class="icon-container">
-            <img src="img/B.linkedin.png" alt="LinkedIn Icon" />
+            <a href="https://www.linkedin.com/in/joud-hasan-145221230" target="_blank">
+                <img src="img/B.linkedin.png" alt="LinkedIn Icon" />
+            </a>
         </div>
-    </footer>
 </body>
 
 </html>
