added missing projects

--- a/index.html
+++ b/index.html
@@ -108,6 +108,39 @@
         </div>
     </section>
 
+    <!-- MyFlix App -->
+    <div class="project-container">
+        <p class="name">MyFlix App</p>
+        <p>MyFlix is a web application built with React that allows users to explore and enjoy a vast collection of
+            movies. With a responsive interface powered by React Bootstrap, MyFlix offers seamless navigation and a
+            great movie browsing experience. The app is connected to a MongoDB-based backend hosted on Heroku.
+        </p>
+        <img src="img/movies.png" alt="MyFlix App Screen" class="project-image">
+        <a href="https://mymovieflixy.netlify.app/" class="btn btn-primary">View Live App</a>
+        <a href="https://github.com/JoudHasan/myFlix-client" class="btn btn-secondary">View GitHub Repository</a>
+    </div>
+
+    <!-- MyMovie App -->
+    <div class="project-container">
+        <p class="name">MyMovie App</p>
+        <p>MyMovie is a web application built with Angular, offering a smooth and engaging movie browsing
+            experience. Users can explore a vast collection of movies with Angular's responsive design and seamless
+            navigation. Developed using Angular CLI, the app is easy to set up and manage.</p>
+        <img src="img/MyMovie.png" alt="MyMovie App Screen" class="project-image">
+        <a href="https://github.com/JoudHasan/myFlix-Angular-O.git" class="btn btn-primary">View Project</a>
+    </div>
+
+    <!-- Pokedex App -->
+    <div class="project-container">
+        <p class="name">Pokedex App</p>
+        <p>The Pokedex App allows users to explore various Pokemon, providing details such as names, heights, and
+            images. Built using HTML, CSS, JavaScript, Bootstrap, and the Fetch API, this app offers a clean and
+            intuitive user experience.</p>
+        <img src="img/Pokedex.png" alt="Pokedex App Screen" class="project-image">
+        <a href="https://github.com/JoudHasan/pokemon.-2.git" class="btn btn-primary">View Project</a>
+    </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact-us" data-aos="fade-up">
         <h1>Contact</h1>
