--- a/index.html
+++ b/index.html
@@ -106,39 +106,39 @@
 
             <a href="https://github.com/JoudHasan/Chat.App.git" class="btn btn-primary">View Project</a>
         </div>
-    </section>
 
-    <!-- MyFlix App -->
-    <div class="project-container">
-        <p class="name">MyFlix App</p>
-        <p>MyFlix is a web application built with React that allows users to explore and enjoy a vast collection of
-            movies. With a responsive interface powered by React Bootstrap, MyFlix offers seamless navigation and a
-            great movie browsing experience. The app is connected to a MongoDB-based backend hosted on Heroku.
-        </p>
-        <img src="img/movies.png" alt="MyFlix App Screen" class="project-image">
-        <a href="https://mymovieflixy.netlify.app/" class="btn btn-primary">View Live App</a>
-        <a href="https://github.com/JoudHasan/myFlix-client" class="btn btn-secondary">View GitHub Repository</a>
-    </div>
 
-    <!-- MyMovie App -->
-    <div class="project-container">
-        <p class="name">MyMovie App</p>
-        <p>MyMovie is a web application built with Angular, offering a smooth and engaging movie browsing
-            experience. Users can explore a vast collection of movies with Angular's responsive design and seamless
-            navigation. Developed using Angular CLI, the app is easy to set up and manage.</p>
-        <img src="img/MyMovie.png" alt="MyMovie App Screen" class="project-image">
-        <a href="https://github.com/JoudHasan/myFlix-Angular-O.git" class="btn btn-primary">View Project</a>
-    </div>
+        <!-- MyFlix App -->
+        <div class="project-container">
+            <p class="name">MyFlix App</p>
+            <p>MyFlix is a web application built with React that allows users to explore and enjoy a vast collection of
+                movies. With a responsive interface powered by React Bootstrap, MyFlix offers seamless navigation and a
+                great movie browsing experience. The app is connected to a MongoDB-based backend hosted on Heroku.
+            </p>
+            <img src="img/movies.png" alt="MyFlix App Screen" class="project-image">
+            <a href="https://mymovieflixy.netlify.app/" class="btn btn-primary">View Live App</a>
+            <a href="https://github.com/JoudHasan/myFlix-client" class="btn btn-secondary">View GitHub Repository</a>
+        </div>
 
-    <!-- Pokedex App -->
-    <div class="project-container">
-        <p class="name">Pokedex App</p>
-        <p>The Pokedex App allows users to explore various Pokemon, providing details such as names, heights, and
-            images. Built using HTML, CSS, JavaScript, Bootstrap, and the Fetch API, this app offers a clean and
-            intuitive user experience.</p>
-        <img src="img/Pokedex.png" alt="Pokedex App Screen" class="project-image">
-        <a href="https://github.com/JoudHasan/pokemon.-2.git" class="btn btn-primary">View Project</a>
-    </div>
+        <!-- MyMovie App -->
+        <div class="project-container">
+            <p class="name">MyMovie App</p>
+            <p>MyMovie is a web application built with Angular, offering a smooth and engaging movie browsing
+                experience. Users can explore a vast collection of movies with Angular's responsive design and seamless
+                navigation. Developed using Angular CLI, the app is easy to set up and manage.</p>
+            <img src="img/MyMovie.png" alt="MyMovie App Screen" class="project-image">
+            <a href="https://github.com/JoudHasan/myFlix-Angular-O.git" class="btn btn-primary">View Project</a>
+        </div>
+
+        <!-- Pokedex App -->
+        <div class="project-container">
+            <p class="name">Pokedex App</p>
+            <p>The Pokedex App allows users to explore various Pokemon, providing details such as names, heights, and
+                images. Built using HTML, CSS, JavaScript, Bootstrap, and the Fetch API, this app offers a clean and
+                intuitive user experience.</p>
+            <img src="img/Pokedex.png" alt="Pokedex App Screen" class="project-image">
+            <a href="https://github.com/JoudHasan/pokemon.-2.git" class="btn btn-primary">View Project</a>
+        </div>
     </section>
 
     <!-- Contact Section -->
@@ -183,7 +183,15 @@
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                const target = document.querySelector(this.getAttribute('href'));
+                const offset = 60; // Adjust according to the height of your header
+                const bodyRect = document.body.getBoundingClientRect().top;
+                const targetRect = target.getBoundingClientRect().top;
+                const targetPosition = targetRect - bodyRect;
+                const offsetPosition = targetPosition - offset;
+
+                window.scrollTo({
+                    top: offsetPosition,
                     behavior: 'smooth'
                 });
             });
